2014-03-26  Niels Möller  <nisse@lysator.liu.se>

	* dsa.h (struct dsa_params): New struct.

	* dsa-sign.c (dsa_sign): Use struct dsa_params, with key as a
	separate mpz_t.
	* dsa-verify.c (dsa_verify): Likewise.
	* dsa-sha1-verify.c (dsa_sha1_verify_digest, dsa_sha1_verify): Use
	dsa_verify, cast the struct dsa_public_key * input to a struct
	dsa_params *
	* dsa-sha256-verify.c (dsa_sha256_verify_digest)
	(dsa_sha256_verify): Likewise.
	* dsa-sha1-sign.c (dsa_sha1_sign_digest, dsa_sha1_sign): Likewise
	use dsa_sign, with a cast from struct dsa_public_key * to struct
	dsa_params *.
	* dsa-sha256-sign.c (dsa_sha256_sign_digest, dsa_sha256_sign):
	Likewise.

	* testsuite/testutils.c (test_dsa_verify): Use struct dsa_params.
	(test_dsa_key): Likewise.
	* testsuite/dsa-test.c (test_main): Adapt to test_dsa_key and
	test_dsa_verify changes.
	* testsuite/dsa-keygen-test.c (test_main): Adapt to
	test_dsa_key change.

	* testsuite/testutils.c (test_dsa_sign): #if out, currently
	unused.

2014-03-23  Niels Möller  <nisse@lysator.liu.se>

	From Owen Kirby:
	* ccm.c: New file.
	* ccm.h: New file.
	* ccm-aes128.c: New file.
	* ccm-aes192.c: New file.
	* ccm-aes256.c: New file.
	* Makefile.in (nettle_SOURCES): Added ccm source files.
	(HEADERS): Added ccm.h.
	* testsuite/ccm-test.c: New file.
	* testsuite/Makefile.in (TS_NETTLE_SOURCES): Added ccm-test.c.

2014-03-20  Niels Möller  <nisse@lysator.liu.se>

	From Joachim Strömbergson:
	* sha512.c (K): Indentation fix.
	(sha512_224_init, sha512_224_digest, sha512_256_init)
	(sha512_256_digest): New functions.
	* sha2.h: Add prototypes.
	(sha512_224_update, sha512_256_update): New aliases for
	sha512_update.

2014-03-18  Niels Möller  <nisse@lysator.liu.se>

	* examples/nettle-benchmark.c (main): Add benchmarking of arcfour,
	salsa20 and chacha, via time_aead.

	* nettle-internal.c (nettle_arcfour128): Define, as a struct
	nettle_aead (with NULL set_nonce, update, and digest methods).